# TaloNet

./: .gitignore  README.md  pyproject.toml  requirements-forensics.txt  requirements-gcs.txt  requirements-optional.txt
.github/workflows/: ci.yml
bom/: TaloNet_BOM.xlsx
cad/: README.md  forensic_appliance.scad  talonet_frame.scad
defense/: README.md  __init__.py  linalg.py  monitor.py
defense/gnss/: __init__.py  osnma_adapter.py  raim.py  spoof_detection.py
defense/link/: __init__.py  mavlink_signing.py  rf_link_security.py
docs/: 00_기획문서.md  01_드론_스펙.md  02_내장_VLM_모델.md  03_내장_센서.md  04_추가_부품.md  05_방어_시스템.md  06_회로_설계.md  07_소프트웨어_기획.md  08_사후_포렌식.md  09_Forensic_Appliance_Design.md  10_Forensic_Appliance_Operator_Guide.md  11_CONOPS_and_Deployment.md  12_Garage_Build_Guide.md
forensics/: README.md  __init__.py  appliance.py  chain_of_custody.py  geo.py  interfaces.py  pipeline.py  printing.py
forensics/adapters/: __init__.py  content.py  flightlog.py  hashing.py  imaging.py  report.py  trajectory.py
gcs/: README.md  __init__.py  __main__.py  app.py  camera.py  control.py  link.py  payload_map.py  sim_vehicle.py
landing/: GPT_PROMPT.md  contact.html  docs.css  docs.html  index.html  mission.html  privacy.html  script.js  styles.css  terms.html
tests/: test_forensics_core.py  test_forensics_geo.py  test_forensics_parsers.py  test_gcs.py  test_gcs_mavlink.py  test_mavlink_signing.py  test_monitor.py  test_osnma_adapter.py  test_raim.py  test_rf_link_security.py  test_spoof_detection.py
tools/: generate_bom.py  rename_codename.py
(+4 files in other folders)
