[project]
name = "talonet-defense"
version = "0.1.0"
description = "TaloNet defensive navigation & link-security stack (defence-only counter-UAS)"
requires-python = ">=3.10"
dependencies = []  # core stack is standard-library only

[project.optional-dependencies]
# Live signal-in-space OSNMA verification (OSNMAlib, EUPL-1.2). Optional.
osnma = ["osnma>=3.2"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
